セルフアカウント登録できるようにする Fixes #503
