# internal/identity/api/oas/oas_server_gen.go
@@ -20,6 +20,12 @@ type Handler interface {
 	//
 	// POST /v1/identity/google
 	V1IdentityGooglePost(ctx context.Context, req *GoogleLoginRequest) error
+	// V1IdentityLoginPost implements POST /v1/identity/login operation.
+	//
+	// Login with email and password.
+	//
+	// POST /v1/identity/login
+	V1IdentityLoginPost(ctx context.Context, req *LoginWithEmailRequest) error
 	// V1IdentityLogoutPost implements POST /v1/identity/logout operation.
 	//
 	// Logout.
@@ -38,6 +44,18 @@ type Handler interface {
 	//
 	// GET /v1/identity/me
 	V1IdentityMeGet(ctx context.Context) (*User, error)
+	// V1IdentitySignupPost implements POST /v1/identity/signup operation.
+	//
+	// Signup with email and password.
+	//
+	// POST /v1/identity/signup
+	V1IdentitySignupPost(ctx context.Context, req *SignupWithEmailRequest) error
+	// V1IdentityVerifyEmailPost implements POST /v1/identity/verify-email operation.
+	//
+	// Verify email address.
+	//
+	// POST /v1/identity/verify-email
+	V1IdentityVerifyEmailPost(ctx context.Context, req *VerifyEmailRequest) error
 	// NewError creates *ErrorStatusCode from error returned by handler.
 	//
 	// Used for common default response.
